src/janus/testing/snapshots/metri_engine__janus__testing__contract_tests__viz_goldens__bubble_plan.snap
---
source: src/janus/testing/contract_tests.rs
expression: plan
---
AevtScan {
    entity_type: "meter_reading",
    shard_total: None,
}
