src/janus/testing/snapshots/metri_engine__janus__testing__contract_tests__viz_goldens__csv_export_native.snap
---
source: src/janus/testing/contract_tests.rs
assertion_line: 608
expression: native
---
Ok(
    AevtScan {
        tenant_id: "tnt_golden",
        entity_type: "work_order",
    },
)
