src/janus/testing/snapshots/metri_engine__janus__testing__contract_tests__viz_goldens__csv_export_plan.snap
---
source: src/janus/testing/contract_tests.rs
expression: plan
---
AevtScan {
    entity_type: "work_order",
    shard_total: None,
}
