src/janus/testing/snapshots/metri_engine__janus__testing__contract_tests__viz_goldens__kpi_plan.snap
---
source: src/janus/testing/contract_tests.rs
expression: plan
---
AevtScan {
    entity_type: "asset",
    shard_total: None,
}
