src/janus/testing/snapshots/metri_engine__janus__testing__contract_tests__viz_goldens__pie_native.snap
---
source: src/janus/testing/contract_tests.rs
expression: native
---
AevtScan {
    tenant_id: "tnt_golden",
    entity_type: "work_order",
}
